--- a/Text Extracting Code Maggy Ryan.ipynb
+++ b/Text Extracting Code Maggy Ryan.ipynb
@@ -32,10 +32,10 @@
    },
    "outputs": [],
    "source": [
-    "# We'll start by importing all the packages we need.\n",
+    "# We'll start by importing all the packages we need\n",
     "# BeautifulSoup is used for webscraping\n",
     "# urllib.request is used to open the URLs\n",
-    "# requests, requests_cache, and re are used to cache the web results so we don't have to retreive from the server each time we run the program.\n",
+    "# requests, requests_cache, and re are used to cache the web results so we don't have to retreive from the server each time we run the program\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
     "import urllib.request as urllib2\n",
@@ -1653,7 +1653,12 @@
     "https://www.tutorialspoint.com/python/list_remove.htm    \n",
     "https://pythonspot.com/reading-csv-files-in-python/\n",
     "http://amueller.github.io/word_cloud/auto_examples/simple.html#sphx-glr-auto-examples-simple-py\n",
-    "    "
+    "https://stackoverflow.com/questions/332289/how-do-you-change-the-size-of-figures-drawn-with-matplotlib\n",
+    "https://stackoverflow.com/questions/10540929/figure-of-imshow-is-too-small\n",
+    "https://stackoverflow.com/questions/44642082/text-or-legend-cut-from-matplotlib-figure-on-savefig\n",
+    "https://stackoverflow.com/questions/46615554/how-to-display-multiple-images-in-one-figure-correctly\n",
+    "https://stackoverflow.com/questions/26649716/how-to-show-pil-image-in-ipython-notebook\n",
+    "https://stackoverflow.com/questions/9622163/save-plot-to-image-file-instead-of-displaying-it-using-matplotlib"
    ]
   }
  ],
