--- a/Written Report and Conclusions.ipynb
+++ b/Written Report and Conclusions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Attending UC Davis as a freshman can be an overwhelming experience. UC Davis has over 100 majors to pick from. As a students who initially entered as an \"Undeclared - Physical Sciences\" major, I spent a lot of time in my first three years taking courses at random, searching for something that I enjoyed studying. I realized that I would "
+    "Attending UC Davis as a freshman can be an overwhelming experience. UC Davis has over 100 majors to pick from. As a students who initially entered as an \"Undeclared - Physical Sciences\" major, I spent a lot of time in my first three years taking courses at random, searching for something that I enjoyed studying. I realized that I could have saved a lot of time (and units!) by looking at which courses could be used to satisfy requirements for multiple majors. My "
    ]
   },
   {
@@ -16,9 +16,9 @@
     "# Questions\n",
     "The two questions that I wanted to answer were as follows:\n",
     "\n",
-    "1) What are the most common prerequisite lower-division courses at University of California, Davis for each undergraduate college?\n",
+    "Question 1) What are the most common prerequisite lower-division courses at University of California, Davis for each undergraduate college?\n",
     "\n",
-    "2) What are the best 6 courses to take as a first-year undergraduate to minimize the chance of “wasted” units?"
+    "Question 2) What are the best 6 courses to take as a first-year undergraduate to minimize the chance of “wasted” units?"
    ]
   },
   {
@@ -33,7 +33,7 @@
     "\n",
     "When I had done the initial data extraction, I exported each of the files to a csv.\n",
     "\n",
-    "The College of Letters and Science required a little more work. Because of the sheer volume of the unrelated majors, I put each of the majors into one of four categories: Fine Arts, Social Sciences, Physical Sciences, or Humanities. I did this as each entering student in the College of Letters and Science with an \"Undeclared\" major must pick a general subject area he or she will be admitted under. This was unnecessary for the other undergraduate colleges as the Colleges of Biological Sciences and Agriculture and Environmental Sciences have only one \"Undeclared\" major each, and the College of Engineering does not offer the option for an undeclared major. In order to do this, I used a series of keywords to sort the majors rather than adding each of them to their category by hand. Each of sublists within the College of Letters and Science was exported to a csv file as well."
+    "The College of Letters and Science required a little more work. Because of the sheer volume of the unrelated majors, I put each of the majors into one of four categories: Fine Arts, Social Sciences, Physical Sciences, or Humanities. I did this as each entering student in the College of Letters and Science with an \"Undeclared\" major must pick a general subject area he or she will be admitted under. In order to do this, I used a series of keywords to sort the majors rather than adding each of them to their category by hand. Each of sublists within the College of Letters and Science was exported to a csv file as well. Because the Colleges of Biological Sciences, the College of Agriculture and Environmental Sciences, and the College of Engineering lack multiple \"Undeclared\" majors, I did not further divide the majors into subcategories for the other colleges."
    ]
   },
   {
@@ -486,7 +486,7 @@
     "\n",
     "For the most useful courses, I wanted to come up with a list of classes that would be likely to be useful for many different majors. For example, in the College of Letters and Science, taking a Physics 9A course will not help you if you end up switching your major to statistics or math. The courses that I selected as the \"most useful\" were likely to be a prerequisite course for another major in that college (or major area cluster for the College of Letters and Science.\n",
     "\n",
-    "When going through the list, I listed up to the most 6 \"useful\" courses using the definition above. I decided to only use the first instance of a course subject area showing up as it doesn't make sense to take an entire subject sequence if you are still deciding on which major to pick. From the word clouds and bar graphs, I have thus concluded the most useful courses to take as a first-year undergraduate as below:\n",
+    "I found the 6 \"useful\" courses using the definition above. I decided to only use the first instance of a course subject area showing up as it doesn't make sense to take an entire subject sequence if you are still deciding on which major to pick. From the word clouds and bar graphs, I have thus concluded the most useful courses to take as a first-year undergraduate as below:\n",
     "\n",
     "Engineering:\n",
     "    Mathematics 21, Physics 9A, Chemistry 2A, English 3, Comparative Literature 1, University Writing Program 1\n",
