Personal Information Removed
Removed personal student ID information from public repo

--- a/Text Extracting Code Maggy Ryan.ipynb
+++ b/Text Extracting Code Maggy Ryan.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Name: Maggy Ryan\n",
-    "Student ID: 998 037 677"
+    "Student ID: XXX XXX XXXX
    ]
   },
   {
@@ -75,7 +75,7 @@
     "def getLowerDivRequirements(majorUrl):\n",
     "    page = requests.get(majorUrl)\n",
     "\n",
-    "# This extracts the HTML from the page the running it through beautiful soup to parse\n",
+    "# This extracts the HTML from the page and runs it through beautiful soup to parse\n",
     "    soup = BeautifulSoup(page.text,'html.parser')\n",
     "    if 'registrar' in majorUrl:       \n",
     "        page = requests.get(soup.a.get('href'))\n",
@@ -109,6 +109,7 @@
     "            classNumbers = False\n",
     "            className = ''\n",
     "            \n",
+    "\n
     "# This searches for the end of the prerequisite courses            \n",
     "            if classStrings[0] == 'Depth' or (classStrings[0] == 'Total' and classStrings[1] == 'Depth') or (classStrings[0] == 'Upper' and classStrings[1] == 'Division'):\n",
     "                break\n",
@@ -127,7 +128,7 @@
     "                if len(string) > 1 and string[0] == '&':\n",
     "                    string = string.replace('&','')\n",
     "\n",
-    "# If an \"either\" appears, we reset the class name and then skip. Take either CHE 2A or BIS 2A both CHE2A and BIS 2A would be included.         \n",
+    "# If an \"either\" appears, we reset the class name and then skip. For "take either CHE 2A or BIS 2A", both CHE2A and BIS 2A would be included in the class list.         \n",
     "                if string == 'either' or ':' in string or '(' in string:\n",
     "                    className = ''\n",
     "                    continue\n",
@@ -145,7 +146,7 @@
     "                if (string[0].isdigit() == False) or (classNumbers == True and classNumbers == string[0].isupper()):\n",
     "                    className += string + ' '\n",
     "\n",
-    "# This puts the course letters and numbers in the right format taking into accoutn the initial different in how they are listed (e.g. commas, semicolons, dashes, etc..\n",
+    "# This puts the course letters and numbers in the right format taking into accoutn the initial different in how they are listed (e.g. commas, semicolons, dashes, etc.)\n",
     "                else:\n",
     "                    classNumbers = True                   \n",
     "                    classNum = ''.join([i for i in string if i.isdigit()])                                       \n",
